# openptv-1

liboptv/: CMakeLists.txt
liboptv/include/: parameters.h
liboptv/src/: CMakeLists.txt  parameters.c
liboptv/tests/: CMakeLists.txt  check_parameters.c
py_bind/optv/: compare_mm_np.pyx
